## Makefile for the gnulib-local directory of GNU gettext
## Copyright (C) 2006-2008, 2010-2011, 2015-2016 Free Software Foundation, Inc.
##
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in.

# Generate this list with
# find . '(' -name CVS -o -name Makefile.am ')' -prune -o -type f '!' '(' -name '*.orig' -or -name '*~' -or -name 'ChangeLog.*' ')' -printf '%P\n' | sort | tr '\012' @ | sed 's/@$/%/;s/@/ \\@/g' | tr @% '\012\012'
EXTRA_DIST = \
build-aux/moopp \
lib/addext.c \
lib/alloca.in.h \
lib/argmatch.h.diff \
lib/backupfile.c \
lib/backupfile.h \
lib/basename.c \
lib/basename.h \
lib/closeout.c \
lib/closeout.h \
lib/error.h.diff \
lib/error-progname.c \
lib/error-progname.h \
lib/exitfail.h.diff \
lib/execute.c.diff \
lib/fd-ostream.oo.c \
lib/fd-ostream.oo.h \
lib/file-ostream.oo.c \
lib/file-ostream.oo.h \
lib/fnmatch.c.diff \
lib/fnmatch_loop.c.diff \
lib/getopt.in.h.diff \
lib/gettext.h \
lib/gl_array_list.h.diff \
lib/gl_linkedhash_list.h.diff \
lib/glib.in.h \
lib/glibconfig.in.h \
lib/glib/README \
lib/glib/ghash.c \
lib/glib/ghash.in.h \
lib/glib/glist.c \
lib/glib/glist.in.h \
lib/glib/gmessages.c \
lib/glib/gprimes.c \
lib/glib/gprimes.in.h \
lib/glib/gstrfuncs.c \
lib/glib/gstrfuncs.in.h \
lib/glib/gstring.c \
lib/glib/gstring.in.h \
lib/glib/gtypes.in.h \
lib/hash.c \
lib/hash.h \
lib/html-ostream.oo.c \
lib/html-ostream.oo.h \
lib/html-styled-ostream.oo.c \
lib/html-styled-ostream.oo.h \
lib/iconv-ostream.oo.c \
lib/iconv-ostream.oo.h \
lib/libcroco/README \
lib/libcroco/cr-additional-sel.c \
lib/libcroco/cr-additional-sel.h \
lib/libcroco/cr-attr-sel.c \
lib/libcroco/cr-attr-sel.h \
lib/libcroco/cr-cascade.c \
lib/libcroco/cr-cascade.h \
lib/libcroco/cr-declaration.c \
lib/libcroco/cr-declaration.h \
lib/libcroco/cr-doc-handler.c \
lib/libcroco/cr-doc-handler.h \
lib/libcroco/cr-enc-handler.c \
lib/libcroco/cr-enc-handler.h \
lib/libcroco/cr-fonts.c \
lib/libcroco/cr-fonts.h \
lib/libcroco/cr-input.c \
lib/libcroco/cr-input.h \
lib/libcroco/cr-num.c \
lib/libcroco/cr-num.h \
lib/libcroco/cr-om-parser.c \
lib/libcroco/cr-om-parser.h \
lib/libcroco/cr-parser.c \
lib/libcroco/cr-parser.h \
lib/libcroco/cr-parsing-location.c \
lib/libcroco/cr-parsing-location.h \
lib/libcroco/cr-prop-list.c \
lib/libcroco/cr-prop-list.h \
lib/libcroco/cr-pseudo.c \
lib/libcroco/cr-pseudo.h \
lib/libcroco/cr-rgb.c \
lib/libcroco/cr-rgb.h \
lib/libcroco/cr-sel-eng.c \
lib/libcroco/cr-sel-eng.h \
lib/libcroco/cr-selector.c \
lib/libcroco/cr-selector.h \
lib/libcroco/cr-simple-sel.c \
lib/libcroco/cr-simple-sel.h \
lib/libcroco/cr-statement.c \
lib/libcroco/cr-statement.h \
lib/libcroco/cr-string.c \
lib/libcroco/cr-string.h \
lib/libcroco/cr-style.c \
lib/libcroco/cr-style.h \
lib/libcroco/cr-stylesheet.c \
lib/libcroco/cr-stylesheet.h \
lib/libcroco/cr-term.c \
lib/libcroco/cr-term.h \
lib/libcroco/cr-tknzr.c \
lib/libcroco/cr-tknzr.h \
lib/libcroco/cr-token.c \
lib/libcroco/cr-token.h \
lib/libcroco/cr-utils.c \
lib/libcroco/cr-utils.h \
lib/libcroco/libcroco-config.h \
lib/libcroco/libcroco.h \
lib/libxml/COPYING \
lib/libxml/DOCBparser.c \
lib/libxml/DOCBparser.in.h \
lib/libxml/HTMLparser.c \
lib/libxml/HTMLparser.in.h \
lib/libxml/HTMLtree.c \
lib/libxml/HTMLtree.in.h \
lib/libxml/README \
lib/libxml/SAX.c \
lib/libxml/SAX2.c \
lib/libxml/SAX2.in.h \
lib/libxml/SAX.in.h \
lib/libxml/c14n.c \
lib/libxml/c14n.in.h \
lib/libxml/catalog.c \
lib/libxml/catalog.in.h \
lib/libxml/chvalid.c \
lib/libxml/chvalid.in.h \
lib/libxml/debugXML.c \
lib/libxml/debugXML.in.h \
lib/libxml/dict.c \
lib/libxml/dict.in.h \
lib/libxml/elfgcchack.h \
lib/libxml/encoding.c \
lib/libxml/encoding.in.h \
lib/libxml/entities.c \
lib/libxml/entities.in.h \
lib/libxml/error.c \
lib/libxml/globals.c \
lib/libxml/globals.in.h \
lib/libxml/hash.c \
lib/libxml/hash.in.h \
lib/libxml/legacy.c \
lib/libxml/libxml.h \
lib/libxml/list.c \
lib/libxml/list.in.h \
lib/libxml/nanoftp.c \
lib/libxml/nanoftp.in.h \
lib/libxml/nanohttp.c \
lib/libxml/nanohttp.in.h \
lib/libxml/parser.c \
lib/libxml/parser.in.h \
lib/libxml/parserInternals.c \
lib/libxml/parserInternals.in.h \
lib/libxml/pattern.c \
lib/libxml/pattern.in.h \
lib/libxml/relaxng.c \
lib/libxml/relaxng.in.h \
lib/libxml/schemasInternals.in.h \
lib/libxml/schematron.c \
lib/libxml/schematron.in.h \
lib/libxml/threads.c \
lib/libxml/threads.in.h \
lib/libxml/tree.c \
lib/libxml/tree.in.h \
lib/libxml/uri.c \
lib/libxml/uri.in.h \
lib/libxml/valid.c \
lib/libxml/valid.in.h \
lib/libxml/xinclude.c \
lib/libxml/xinclude.in.h \
lib/libxml/xlink.c \
lib/libxml/xlink.in.h \
lib/libxml/xmlIO.c \
lib/libxml/xmlIO.in.h \
lib/libxml/xmlautomata.in.h \
lib/libxml/xmlerror.in.h \
lib/libxml/xmlexports.in.h \
lib/libxml/xmlmemory.c \
lib/libxml/xmlmemory.in.h \
lib/libxml/xmlmodule.c \
lib/libxml/xmlmodule.in.h \
lib/libxml/xmlreader.c \
lib/libxml/xmlreader.in.h \
lib/libxml/xmlregexp.c \
lib/libxml/xmlregexp.in.h \
lib/libxml/xmlsave.c \
lib/libxml/xmlsave.in.h \
lib/libxml/xmlschemas.c \
lib/libxml/xmlschemas.in.h \
lib/libxml/xmlschemastypes.c \
lib/libxml/xmlschemastypes.in.h \
lib/libxml/xmlstring.c \
lib/libxml/xmlstring.in.h \
lib/libxml/xmlunicode.c \
lib/libxml/xmlunicode.in.h \
lib/libxml/xmlversion.in.h \
lib/libxml/xmlwriter.c \
lib/libxml/xmlwriter.in.h \
lib/libxml/xpath.c \
lib/libxml/xpath.in.h \
lib/libxml/xpathInternals.in.h \
lib/libxml/xpointer.c \
lib/libxml/xpointer.in.h \
lib/memory-ostream.oo.c \
lib/memory-ostream.oo.h \
lib/moo.h \
lib/obstack.h.diff \
lib/ostream.oo.c \
lib/ostream.oo.h \
lib/progname.h.diff \
lib/regcomp.c.diff \
lib/regexec.c.diff \
lib/regex_internal.h.diff \
lib/spawn-pipe.c.diff \
lib/styled-ostream.oo.c \
lib/styled-ostream.oo.h \
lib/term-ostream.oo.c \
lib/term-ostream.oo.h \
lib/term-styled-ostream.oo.c \
lib/term-styled-ostream.oo.h \
lib/termcap.h \
lib/terminfo.h \
lib/tparm.c \
lib/tputs.c \
lib/unistd.in.h.diff \
lib/xalloc.h \
lib/xerror.c \
lib/xerror.h \
lib/xgetcwd.c \
lib/xgetcwd.h \
lib/xmalloc.c \
lib/xstrdup.c \
m4/alloca.m4 \
m4/backupfile.m4 \
m4/curses.m4 \
m4/gcj.m4 \
m4/libcroco.m4 \
m4/libglib.m4 \
m4/libxml.m4 \
m4/java.m4 \
m4/moo.m4 \
m4/termcap.m4 \
m4/terminfo.m4 \
m4/term-ostream.m4 \
m4/unionwait.m4 \
modules/backupfile \
modules/basename \
modules/closeout \
modules/error-progname \
modules/fd-ostream \
modules/file-ostream \
modules/fnmatch.diff \
modules/gcj \
modules/gettext-runtime-misc \
modules/gettext-tools-misc \
modules/hash \
modules/html-ostream \
modules/html-styled-ostream \
modules/iconv-ostream \
modules/java \
modules/libcroco \
modules/libglib \
modules/libxml \
modules/memory-ostream \
modules/moo \
modules/moo-tests \
modules/ostream \
modules/styled-ostream \
modules/termcap \
modules/termcap-h \
modules/terminfo \
modules/terminfo-h \
modules/term-ostream \
modules/term-ostream-tests \
modules/term-styled-ostream \
modules/wait-process.diff \
modules/xalloc \
modules/xalloc-die \
modules/xerror \
modules/xgetcwd \
tests/test-environ.c.diff \
tests/test-moo-aroot.oo.c \
tests/test-moo-aroot.oo.h \
tests/test-moo-assign.c \
tests/test-moo-asub1.oo.c \
tests/test-moo-asub1.oo.h \
tests/test-moo-root.oo.c \
tests/test-moo-root.oo.h \
tests/test-moo-sub1.oo.c \
tests/test-moo-sub1.oo.h \
tests/test-moo-sub2.oo.c \
tests/test-moo-sub2.oo.h \
tests/test-term-ostream.c \
tests/test-term-ostream-xterm \
tests/test-term-ostream-xterm-r6.out \
tests/test-term-ostream-xterm-xf86-v32.out \
tests/test-term-ostream-xterm-basic.out \
tests/test-term-ostream-xterm-basic-italic.out \
tests/test-term-ostream-xterm-8bit.out \
tests/test-term-ostream-xterm-linux-debian.out \
tests/test-term-ostream-xterm-linux-mandriva.out \
tests/test-term-ostream-xterm-netbsd3.out \
tests/test-term-ostream-xterm-solaris10.out \
tests/test-term-ostream-xterm-aix51.out \
tests/test-term-ostream-xterm-osf51.out \
tests/test-term-ostream-xterm-irix65.out \
tests/test-term-ostream-xterm-mingw.out \
tests/test-term-ostream-xterm-16color.out \
tests/test-term-ostream-xterm-88color.out \
tests/test-term-ostream-xterm-256color.out

maintainer-update-po:
